# BlooFetch

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: clock.rs  main.rs  particles.rs  renderer.rs  spotify.rs  stats.rs
