[package]
name = "bloofetch"
version = "0.3.0"
edition = "2021"
description = "A beautiful full-screen terminal clock with system stats"
license = "MIT"
repository = "https://github.com/Ricardo-Castro-Gastelum/BlooFetch"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
sysinfo = "0.30"
chrono = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
